Changed the color of Shrubs and Scrubs

--- a/templates/mws-report.html
+++ b/templates/mws-report.html
@@ -437,7 +437,7 @@
                     <span>Triple Cropping</span>
                 </div>
                 <div class="legend-item">
-                    <div class="legend-color" style="background-color: #ff0000;"></div>
+                    <div class="legend-color" style="background-color: #4c4ef5;"></div>
                     <span>Shrubs and Scrubs</span>
                 </div>
             </div>
